Добавил разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,130 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+  	<header class="main-header">
+  		<nav class="main-navigation">
+  			<a class=" main-header-logo">
+  				<img src="img/device-header-logo.svg" width="" height="" alt="Логотип интернет-магазина Device">
+  			</a>
+  			<p class="site-search">Поиск по сайту</p>
+  			<ul class="user-navigation">
+  				<li class="login-link">Войти</li>
+  				<li><a href="#">Сравнить</a></li>
+  				<li><a href="#">Корзина</a></li>
+  			</ul>
+  			<ul class="site-navigation">
+  				<li><a href="catalog.html">Каталог товаров</a></li>
+  				<li><a href="#">Доставка</a></li>
+  				<li><a href="#">Гарантия</a></li>
+  				<li><a href="#">Контакты</a></li>
+  			</ul>
+  		</nav>
+  	</header>
+  	<main class="container">
+  		<h1 class="visually-hidden">Интернет-магазин Device</h1>
+  		<section class="popular">
+  			<h2 class="visually-hidden">Популярные товары:</h2>
+  			<ul>
+  				<li><a href="">Виртуальная реальность</a></li>
+  				<li><a href="">Моноподы для селфи</a></li>
+  				<li><a href="">Экшн-камеры</a></li>
+  				<li><a href="">Фитнес-браслеты</a></li>
+  				<li><a href="">Умные часы</a></li>
+  				<li><a href="">Квадрокоптеры</a></li>
+  			</ul>
+  		</section>
+  		<section class="servises">
+  			<h2 class="visually-hidden">Наши сервисы:</h2>
+  			<ul class="servises-list">
+  				<li>Доставка</li>
+  				<li>Гарантия</li>
+  				<li>Кредит</li>
+  			</ul>
+  			<ul class="services-description">
+  				<li>
+  					<h3>Доставка</h3>
+  					<p>
+  						Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
+  						Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+  					</p>
+  				</li>
+  				<li>
+  					<h3>Гарантия</h3>
+  					<p>
+  						Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый.
+  						Товар, не дом, конечно же.
+  					</p>
+  				</li>
+  				<li>
+  					<h3>Кредит</h3>
+  					<p>
+  						Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита.
+  						Выгодные для нашего банка, разумеется.
+  					</p>
+  				</li>
+  			</ul>
+  		</section>
+  		<section class="companies">
+  			<h2 class="visually-hidden">На нашем сайте представлена продукция популярных брендов:</h2>
+  			<ul class="companies-list">
+  				<li><a href="#"><img src="img/logo-1.png" width="" height="" alt="Dji"></a></li>
+  				<li><a href="#"><img src="img/logo-2.png" width="" height="" alt="Sp Gadgets"></a></li>
+  				<li><a href="#"><img src="img/logo-3.png" width="" height="" alt="Go Pro"></a></li>
+  				<li><a href="#"><img src="img/logo-4.png" width="" height="" alt="Vive"></a></li>
+  			</ul>
+  		</section>
+  		<section class="about-us">
+  			<h2>О нас</h2>
+  			<p>
+				Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
+  			</p>
+  			<p>
+				Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:
+			</p>
+  			<ul class="deliveries">
+  				<li><a href="#">Деловые Линии</a></li>
+  				<li><a href="#">Автотрейдинг</a></li>
+  				<li><a href="#">ЖелДорЭкспедиция</a></li>
+  			</ul>
+  			<a href="#">Подробнее о нас</a>
+  		</section>
+  		<section class="contacts">
+  			<h2>Контакты</h2>
+  			<p>
+  				Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
+  			</p>
+  			<p>
+  				<a href="#"><img src="img/map.jpeg" width="" height="" alt="Наш адрес: г. Москва, ул. строителей, 15"></a>
+  			</p>
+  			<a href="#">Напишите нам</a>
+  		</section>
+  	</main>
+  	<footer class="main-footer">
+  		<p class="footer-contacts">
+  			<a><img src="img/device-footer-logo" alt="Логотип интернет-магазина Device"></a>
+  			<span>г. Москва, ул. строителей, 15</span>
+  			<span>Тел.: +7 (495) 495-95-95</span>
+  		</p>
+  		<div class="footer-navigation">
+			<ul class="site-footer-navigation">
+				<li><a href="#">Доставка</a></li>
+				<li><a href="#">Гарантия</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+			<ul class="user-footer-navigation">
+				<li class="login-link">Войти</li>
+				<li><a href="#">Сравнить</a></li>
+				<li><a href="#">Корзина</a></li>
+			</ul>
+		</div>
+		<ul class="footer-social">
+			<li><a class="social-button" href="#">Фейсбук</a></li>
+			<li><a class="social-button" href="#">Инстаграм</a></li>
+			<li><a class="social-button" href="#">Твиттер</a></li>
+		</ul>
+		<p class="footer-copyright">
+			<a href="https://htmlacademy.ru"><img src="img/academy-footer-logo" alt="Логотоп компании HTML Academy"></a>
+		</p>
+  	</footer>
   </body>
 </html>
