Добавил разметку слайдов главной страницы

--- a/index.html
+++ b/index.html
@@ -130,5 +130,67 @@
 			<a href="https://htmlacademy.ru"><img src="img/academy-footer-logo" width="5" height="5" alt="Логотоп компании HTML Academy"></a>
 		</p>
   	</footer>
+  	<ol class="sliders">
+  		<li class="sliders-item">
+			<section class="modal">
+				<h2>Делай селфи, как Бен Стиллер!</h2>
+				<p>
+					Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. 
+				</p>
+				<a href="#"><img src="modal-photo-1.png" width="5" height="5" alt="Фото самой длинной палки для селфи"></a>
+				<table class="advantages">
+					<tr>
+						<td>8,5 м</td>
+						<td>5 кг</td>
+						<td>Карбон</td>
+					</tr>
+					<tr>
+						<td>Длина палки</td>
+						<td>Вес палки</td>
+						<td>Материал</td>
+					</tr>
+				</table>
+				<a href="#">Подробнее</a>
+			</section>
+  		</li>
+  		<li>
+			<section class="modal">
+				<h2>Худеем правильно!</h2>
+				<p>
+					Мотивирующие фитнес-браслеты помогут найти в себе силы  не пропускать занятия и соблюдать диету. 
+				</p>
+				<a href="#"><img src="modal-photo-2.png" width="5" height="5" alt="Фото мотивирующего браслета"></a>
+				<table class="advantages">
+					<tr>
+						<td>48 часов</td>
+					</tr>
+					<tr>
+						<td>Без подзарядки</td>
+					</tr>
+				</table>
+				<a href="#">Подробнее</a>
+			</section>	
+  		</li>
+  		<li>
+			<section class="modal">
+				<h2>Порхает как бабочка, жалит как пчела!</h2>
+				<p>
+					Этот обычный, на первый взгляд, квадрокоптер оснащен  мощным лазером, замаскированным под стандартную камеру. 
+				</p>
+				<a href="#"><img src="modal-photo-3.png" width="5" height="5" alt="Фото квадрокоптера с лазером"></a>
+				<table class="advantages">
+					<tr>
+						<td>800 м</td>
+						<td>Дальность полета</td>
+					</tr>
+					<tr>
+						<td>50 м</td>
+						<td>Радиус поражения</td>
+					</tr>
+				</table>
+				<a href="#">Подробнее</a>
+			</section>
+  		</li>
+  	</ol>
   </body>
 </html>
