Добавил в разметку каталога фильтры

--- a/catalog.html
+++ b/catalog.html
@@ -97,3 +97,17 @@
 		<a href="https://htmlacademy.ru"><img src="img/academy-footer-logo" width="5" height="5" alt="Логотоп компании HTML Academy"></a>
 	</p>
 	</footer>
+	<section class="sort">
+		<h2>Сортировка:</h2>
+		<ul class="sort-type-list">
+			<li>По цене</li>
+			<li>По типу</li>
+			<li>По популярности</li>
+		</ul>
+		<ul class="sort-range-list">
+			<li>По возрастанию</li>
+			<li>По убыванию</li>
+		</ul>
+	</section>
+	</body>
+</html>
