--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<header class="main-header">
   		<nav class="main-navigation">
   			<a class=" main-header-logo">
-  				<img src="img/device-header-logo.svg" width="5" height="5" alt="Логотип интернет-магазина Device">
+  				<img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device">
   			</a>
   			<p class="site-search">Поиск по сайту</p>
   			<ul class="user-navigation">
@@ -71,10 +71,10 @@
   		<section class="companies">
   			<h2 class="visually-hidden">На нашем сайте представлена продукция популярных брендов:</h2>
   			<ul class="companies-list">
-  				<li><a href="#"><img src="img/logo-1.png" width="5" height="5" alt="Dji"></a></li>
-  				<li><a href="#"><img src="img/logo-2.png" width="5" height="5" alt="Sp Gadgets"></a></li>
-  				<li><a href="#"><img src="img/logo-3.png" width="5" height="5" alt="Go Pro"></a></li>
-  				<li><a href="#"><img src="img/logo-4.png" width="5" height="5" alt="Vive"></a></li>
+  				<li><a href="#"><img src="img/logo-1.png" width="260" height="100" alt="Dji"></a></li>
+  				<li><a href="#"><img src="img/logo-2.png" width="260" height="100" alt="Sp Gadgets"></a></li>
+  				<li><a href="#"><img src="img/logo-3.png" width="260" height="100" alt="Go Pro"></a></li>
+  				<li><a href="#"><img src="img/logo-4.png" width="260" height="100" alt="Vive"></a></li>
   			</ul>
   		</section>
   		<section class="about-us">
@@ -98,14 +98,14 @@
   				Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
   			</p>
   			<p>
-  				<a href="#"><img src="img/map.jpeg" width="5" height="5" alt="Наш адрес: г. Москва, ул. строителей, 15"></a>
+  				<a href="#"><img src="img/map.jpg" width="560" height="222" alt="Наш адрес: г. Москва, ул. строителей, 15"></a>
   			</p>
   			<a href="#">Напишите нам</a>
   		</section>
   	</main>
   	<footer class="main-footer">
   		<p class="footer-contacts">
-  			<a><img src="img/device-footer-logo" width="5" height="5" alt="Логотип интернет-магазина Device"></a>
+  			<a><img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device"></a>
   			<span>г. Москва, ул. строителей, 15</span>
   			<span>Тел.: +7 (495) 495-95-95</span>
   		</p>
@@ -127,7 +127,7 @@
 			<li><a class="social-button" href="#">Твиттер</a></li>
 		</ul>
 		<p class="footer-copyright">
-			<a href="https://htmlacademy.ru"><img src="img/academy-footer-logo" width="5" height="5" alt="Логотоп компании HTML Academy"></a>
+			<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35" alt="Логотоп компании HTML Academy"></a>
 		</p>
   	</footer>
   	<ol class="sliders">
