--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   	<header class="main-header">
   		<nav class="main-navigation">
   			<a class=" main-header-logo" href="index.html">
-  				<img src="img/device-header-logo.svg" width="5" height="5" alt="Логотип интернет-магазина Device">
+  				<img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device">
   			</a>
   			<p class="site-search">Поиск по сайту</p>
   			<ul class="user-navigation">
@@ -41,22 +41,22 @@
   			<ul class="products">
   				<li class="products-item">
   					<h3><a href="#">Любительская селфи-палка</a></h3>
-  					<a href="#"><img src="img/product-1-photo.img" width="5" height="5" alt="Любительская селфи-палка"></a>
+  					<a href="#"><img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка"></a>
   					<p>500 руб.</p>
   				</li>
   				<li class="products-item">
   					<h3><a href="#">Профессиональная селфи-палка</a></h3>
-   					<a href="#"><img src="img/product-2-photo.img" width="5" height="5" alt="Профессиональная селфи-палка"></a>
+   					<a href="#"><img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка"></a>
   					<p>1500 руб.</p>
   				</li>
   				<li class="products-item">
    					<h3><a href="#">Непотопляемая селфи-палка</a></h3>
-  					<a href="#"><img src="img/product-3-photo.img" width="5" height="5" alt="Непотопляемая селфи-палка"></a>
+  					<a href="#"><img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка"></a>
 					<p>2500 руб.</p>
   				</li>
   				<li class="products-item">
    					<h3><a href="#">Селфи-палка «Следуй за мной»</a></h3>
-  					<a href="#"><img src="img/product-4-photo.img" width="5" height="5" alt="Непотопляемая селфи-палка"></a>
+  					<a href="#"><img src="img/item-4.jpg" width="360" height="380" alt="Непотопляемая селфи-палка"></a>
 					<p>4900 руб.</p>
   				</li>
   			</ul>
@@ -71,7 +71,7 @@
   	</main>
 	<footer class="main-footer">
 	<p class="footer-contacts">
-		<a><img src="img/device-footer-logo" width="5" height="5" alt="Логотип интернет-магазина Device"></a>
+		<a><img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device"></a>
 		<span>г. Москва, ул. строителей, 15</span>
 		<span>Тел.: +7 (495) 495-95-95</span>
 	</p>
@@ -94,7 +94,7 @@
 		<li><a class="social-button" href="#">Твиттер</a></li>
 	</ul>
 	<p class="footer-copyright">
-		<a href="https://htmlacademy.ru"><img src="img/academy-footer-logo" width="5" height="5" alt="Логотоп компании HTML Academy"></a>
+		<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35"alt="Логотоп компании HTML Academy"></a>
 	</p>
 	</footer>
 	<section class="sort">
