изменил тип файлов для логотипов

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
   		<section class="companies">
   			<h2 class="visually-hidden">На нашем сайте представлена продукция популярных брендов:</h2>
   			<ul class="companies-list">
-  				<li><a href="#"><img src="img/logo-1.png" width="260" height="100" alt="Dji"></a></li>
-  				<li><a href="#"><img src="img/logo-2.png" width="260" height="100" alt="Sp Gadgets"></a></li>
-  				<li><a href="#"><img src="img/logo-3.png" width="260" height="100" alt="Go Pro"></a></li>
-  				<li><a href="#"><img src="img/logo-4.png" width="260" height="100" alt="Vive"></a></li>
+  				<li><a href="#"><img src="img/logo-1.jpg" width="260" height="100" alt="Dji"></a></li>
+  				<li><a href="#"><img src="img/logo-2.jpg" width="260" height="100" alt="Sp Gadgets"></a></li>
+  				<li><a href="#"><img src="img/logo-3.jpg" width="260" height="100" alt="Go Pro"></a></li>
+  				<li><a href="#"><img src="img/logo-4.jpg" width="260" height="100" alt="Vive"></a></li>
   			</ul>
   		</section>
   		<section class="about-us">
