Добавил фото слайдов

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				<p>
 					Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. 
 				</p>
-				<a href="#"><img src="modal-photo-1.png" width="5" height="5" alt="Фото самой длинной палки для селфи"></a>
+				<a href="#"><img src="img/slider-1.png" width="384" height="486" alt="Фото самой длинной палки для селфи"></a>
 				<table class="advantages">
 					<tr>
 						<td>8,5 м</td>
@@ -159,7 +159,7 @@
 				<p>
 					Мотивирующие фитнес-браслеты помогут найти в себе силы  не пропускать занятия и соблюдать диету. 
 				</p>
-				<a href="#"><img src="modal-photo-2.png" width="5" height="5" alt="Фото мотивирующего браслета"></a>
+				<a href="#"><img src="img/slider-2.png" width="345" height="485" alt="Фото мотивирующего браслета"></a>
 				<table class="advantages">
 					<tr>
 						<td>48 часов</td>
@@ -177,7 +177,7 @@
 				<p>
 					Этот обычный, на первый взгляд, квадрокоптер оснащен  мощным лазером, замаскированным под стандартную камеру. 
 				</p>
-				<a href="#"><img src="modal-photo-3.png" width="5" height="5" alt="Фото квадрокоптера с лазером"></a>
+				<a href="#"><img src="img/slider-3.png" width="526" height="334" alt="Фото квадрокоптера с лазером"></a>
 				<table class="advantages">
 					<tr>
 						<td>800 м</td>
