--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   			</a>
   			<p class="site-search">Поиск по сайту</p>
   			<ul class="user-navigation">
-  				<li class="login-link">Войти</li>
+  				<li><a class="login-link" href="login.html">Войти</a></li>
   				<li><a href="#">Сравнить</a></li>
   				<li><a href="#">Корзина</a></li>
   			</ul>
@@ -37,7 +37,7 @@
   				<li><a href="">Квадрокоптеры</a></li>
   			</ul>
   		</section>
-  		<section class="servises">
+  		<section class="services">
   			<h2 class="visually-hidden">Наши сервисы:</h2>
   			<ul class="servises-list">
   				<li>Доставка</li>
@@ -131,9 +131,10 @@
 		</p>
   	</footer>
   	<ol class="sliders">
+  		<h2 class="visually-hidden">Лучшие товары</h2>
   		<li class="sliders-item">
 			<section class="modal">
-				<h2>Делай селфи, как Бен Стиллер!</h2>
+				<h3>Делай селфи, как Бен Стиллер!</h3>
 				<p>
 					Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. 
 				</p>
@@ -155,7 +156,7 @@
   		</li>
   		<li>
 			<section class="modal">
-				<h2>Худеем правильно!</h2>
+				<h3>Худеем правильно!</h3>
 				<p>
 					Мотивирующие фитнес-браслеты помогут найти в себе силы  не пропускать занятия и соблюдать диету. 
 				</p>
@@ -173,7 +174,7 @@
   		</li>
   		<li>
 			<section class="modal">
-				<h2>Порхает как бабочка, жалит как пчела!</h2>
+				<h3>Порхает как бабочка, жалит как пчела!</h3>
 				<p>
 					Этот обычный, на первый взгляд, квадрокоптер оснащен  мощным лазером, замаскированным под стандартную камеру. 
 				</p>
@@ -193,4 +194,30 @@
   		</li>
   	</ol>
   </body>
+  <section class="modal-contact">
+  	<h2>Напишите нам</h2>
+  	<form class="contact-form" action="https://echo.htmlacademy.ru" method="post">
+  		<p>
+  			<label for="contact-name">Ваше имя:</label>
+  			<input id="contact-name" type="text" name="name" placeholder="Имя Фамилия">
+  		</p>
+  		<p>
+  			<label for="contact-mail">Ваш e-mail:</label>
+  			<input id="contact-mail" type="email" name="mail" placeholder="email@example.com">
+  		</p>
+  		<p>
+  			<label for="contact-letter">Текст письма:</label>
+  			<textarea id="contact-letter" name="letter"  cols="50" rows="10" placeholder="В свободной форме"></textarea>
+  		</p>
+  		<button type="submit">Отправить</button>
+  	</form>
+  	<button>Закрыть</button>
+  </section>
+  <section class="modal-map">
+  	<h2>Как до нас добраться</h2>
+  	<p>
+  		<img src="img/map.jpg" width="560" height="222" alt="г. Москва, ул. Строителей, 15">
+  	</p>
+  	<button>Закрыть</button>
+  </section>
 </html>
