--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
   			<li class="breadcrumbs-current">Моноподы для селфи</li>
   		</ul>
   		<section class="filters">
-  			<h2 class="visually-hidden">Фильтр товаров</h2>
+  			<h2>Фильтр:</h2>
   			<form class="filter" action="https://echo.htmlacademy.ru" method="get">
   				<fieldset>
   					<legend>Стоимость</legend>
@@ -81,6 +81,18 @@
   				<button type="submit">Показать</button>
   			</form>
   		</section>
+  		<section class="sort">
+				<h2>Сортировка:</h2>
+				<ul class="sort-type-list">
+					<li>По цене</li>
+					<li>По типу</li>
+					<li>По популярности</li>
+				</ul>
+				<ul class="sort-range-list">
+					<li>По возрастанию</li>
+					<li>По убыванию</li>
+				</ul>
+			</section>
   		<section class="catalog">
   			<h2 class="visually-hidden">Каталог товаров</h2>
   			<ul class="products">
@@ -150,17 +162,5 @@
 		<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35"alt="Логотоп компании HTML Academy"></a>
 	</p>
 	</footer>
-	<section class="sort">
-		<h2>Сортировка:</h2>
-		<ul class="sort-type-list">
-			<li>По цене</li>
-			<li>По типу</li>
-			<li>По популярности</li>
-		</ul>
-		<ul class="sort-range-list">
-			<li>По возрастанию</li>
-			<li>По убыванию</li>
-		</ul>
-	</section>
 	</body>
 </html>
