--- a/index.html
+++ b/index.html
@@ -26,69 +26,71 @@
   	</header>
   	<main class="container">
   		<h1 class="visually-hidden">Интернет-магазин Device</h1>
-  		<ol class="sliders">
+  		<section class="sliders">
   			<h2 class="visually-hidden">Лучшие товары</h2>
-  			<li class="sliders-item">
-					<section class="modal">
-						<h3>Делай селфи, как Бен Стиллер!</h3>
-						<p>
-							Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. 
-						</p>
-						<a href="#"><img src="img/slider-1.png" width="384" height="486" alt="Фото самой длинной палки для селфи"></a>
-						<table class="advantages">
-							<tr>
-								<td>8,5 м</td>
-								<td>5 кг</td>
-								<td>Карбон</td>
-							</tr>
-							<tr>
-								<td>Длина палки</td>
-								<td>Вес палки</td>
-								<td>Материал</td>
-							</tr>
-						</table>
-						<a href="#">Подробнее</a>
-					</section>
-  			</li>
-  			<li>
-					<section class="modal">
-						<h3>Худеем правильно!</h3>
-						<p>
-							Мотивирующие фитнес-браслеты помогут найти в себе силы  не пропускать занятия и соблюдать диету. 
-						</p>
-						<a href="#"><img src="img/slider-2.png" width="345" height="485" alt="Фото мотивирующего браслета"></a>
-						<table class="advantages">
-							<tr>
-								<td>48 часов</td>
-							</tr>
-							<tr>
-								<td>Без подзарядки</td>
-							</tr>
-						</table>
-						<a href="#">Подробнее</a>
-					</section>	
-  			</li>
-  			<li>
-					<section class="modal">
-						<h3>Порхает как бабочка, жалит как пчела!</h3>
-						<p>
-							Этот обычный, на первый взгляд, квадрокоптер оснащен  мощным лазером, замаскированным под стандартную камеру. 
-						</p>
-						<a href="#"><img src="img/slider-3.png" width="526" height="334" alt="Фото квадрокоптера с лазером"></a>
-						<table class="advantages">
-							<tr>
-								<td>800 м</td>
-								<td>Дальность полета</td>
-							</tr>
-							<tr>
-								<td>50 м</td>
-								<td>Радиус поражения</td>
-							</tr>
-						</table>
-						<a href="#">Подробнее</a>
-					</section>
-  			</li>
-  		</ol>
+  			<ol>
+  				<li class="sliders-item">
+						<section class="modal">
+							<h3>Делай селфи, как Бен Стиллер!</h3>
+							<p>
+								Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. 
+							</p>
+							<a href="#"><img src="img/slider-1.png" width="384" height="486" alt="Фото самой длинной палки для селфи"></a>
+							<table class="advantages">
+								<tr>
+									<td>8,5 м</td>
+									<td>5 кг</td>
+									<td>Карбон</td>
+								</tr>
+								<tr>
+									<td>Длина палки</td>
+									<td>Вес палки</td>
+									<td>Материал</td>
+								</tr>
+							</table>
+							<a href="#">Подробнее</a>
+						</section>
+  				</li>
+  				<li>
+						<section class="modal">
+							<h3>Худеем правильно!</h3>
+							<p>
+								Мотивирующие фитнес-браслеты помогут найти в себе силы  не пропускать занятия и соблюдать диету. 
+							</p>
+							<a href="#"><img src="img/slider-2.png" width="345" height="485" alt="Фото мотивирующего браслета"></a>
+							<table class="advantages">
+								<tr>
+									<td>48 часов</td>
+								</tr>
+								<tr>
+									<td>Без подзарядки</td>
+								</tr>
+							</table>
+							<a href="#">Подробнее</a>
+						</section>	
+  				</li>
+  				<li>
+						<section class="modal">
+							<h3>Порхает как бабочка, жалит как пчела!</h3>
+							<p>
+								Этот обычный, на первый взгляд, квадрокоптер оснащен  мощным лазером, замаскированным под стандартную камеру. 
+							</p>
+							<a href="#"><img src="img/slider-3.png" width="526" height="334" alt="Фото квадрокоптера с лазером"></a>
+							<table class="advantages">
+								<tr>
+									<td>800 м</td>
+									<td>Дальность полета</td>
+								</tr>
+								<tr>
+									<td>50 м</td>
+									<td>Радиус поражения</td>
+								</tr>
+							</table>
+							<a href="#">Подробнее</a>
+						</section>
+  				</li>
+  			</ol>
+  		</section>
   		<section class="popular">
   			<h2 class="visually-hidden">Популярные товары:</h2>
   			<ul>
