--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
   		<section class="services">
   			<h2 class="visually-hidden">Наши сервисы:</h2>
   			<ul class="servises-list">
-  				<li>Доставка</li>
-  				<li>Гарантия</li>
-  				<li>Кредит</li>
+  				<li><button>Доставка</button></li>
+  				<li><button>Гарантия</button></li>
+  				<li><button>Кредит</button></li>
   			</ul>
   			<ul class="services-description">
   				<li>
