--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс - каталог</title>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
   	<header class="main-header">
@@ -10,9 +13,13 @@
   			<a class=" main-header-logo" href="index.html">
   				<img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device">
   			</a>
-  			<p class="site-search">Поиск по сайту</p>
+				<form class="search" action="https://echo.htmlacademy.ru" 			method="get">
+					<label class="search-label" for="site-search">Поиск по сайту</label>
+					<input class="search-field" type="text" name="search" id="site-search">
+					<button class="search-button" type="submit"><span>Найти</span></button>
+				</form>
   			<ul class="user-navigation">
-  				<li class="logout-link"><button>Выйти</button></li>
+  				<li class="logout-link"><a href="">Выйти</a></li>
   				<li class="user-name"><a href="#">Валентин Петухов</a></li>
   				<li><a href="#">Сравнить</a></li>
   				<li><a href="#">Корзина</a></li>
@@ -144,7 +151,7 @@
   	</main>
 	<footer class="main-footer">
 	<p class="footer-contacts">
-		<a><img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device"></a>
+		<a><img src="img/footer-logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device"></a>
 		<span>г. Москва, ул. строителей, 15</span>
 		<span>Тел.: +7 (495) 495-95-95</span>
 	</p>
