--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   				<img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device">
   			</a>
 				<form class="search" action="https://echo.htmlacademy.ru" method="get">
-					<label class="search-label" for="site-search">Поиск по сайту</label>
-					<input class="search-field" type="text" name="search" id="site-search">
+					<input class="search-field" type="text" name="search" placeholder="Поиск по сайту">
 					<button class="search-button" type="submit"><span>Найти</span></button>
 				</form>
   			<ul class="user-navigation">
@@ -40,7 +39,7 @@
 						<section class="modal">
 							<h3>Делай селфи, как Бен Стиллер!</h3>
 							<p>
-								Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм. 
+								Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
 							</p>
 							<a href="#"><img src="img/slider-1.png" width="384" height="486" alt="Фото самой длинной палки для селфи"></a>
 							<table class="advantages">
@@ -62,7 +61,7 @@
 						<section class="modal">
 							<h3>Худеем правильно!</h3>
 							<p>
-								Мотивирующие фитнес-браслеты помогут найти в себе силы  не пропускать занятия и соблюдать диету. 
+								Мотивирующие фитнес-браслеты помогут найти в себе силы  не пропускать занятия и соблюдать диету.
 							</p>
 							<a href="#"><img src="img/slider-2.png" width="345" height="485" alt="Фото мотивирующего браслета"></a>
 							<table class="advantages">
@@ -74,13 +73,13 @@
 								</tr>
 							</table>
 							<a class="button" href="#"><span>Подробнее</span></a>
-						</section>	
+						</section>
   				</li>
   				<li>
 						<section class="modal">
 							<h3>Порхает как бабочка, жалит как пчела!</h3>
 							<p>
-								Этот обычный, на первый взгляд, квадрокоптер оснащен  мощным лазером, замаскированным под стандартную камеру. 
+								Этот обычный, на первый взгляд, квадрокоптер оснащен  мощным лазером, замаскированным под стандартную камеру.
 							</p>
 							<a href="#"><img src="img/slider-3.png" width="526" height="334" alt="Фото квадрокоптера с лазером"></a>
 							<table class="advantages">
